syntax = "proto3";
package rental;
import "google/api/annotations.proto";

option go_package = "coolcar/rental/api/gen/v1;identify";


enum IdentifyStatus{
  UN_SUBMIT = 0;
  PENDING = 1;
  VERIFIED = 2;
}

message Profile{
  Identity identify = 1;
  IdentifyStatus identify_status = 2;
}

enum Gender{
  NOT_KNOWN = 0;
  MALE = 1;
  FEMALE = 2;
}

message Identity{
  string  lic_number = 1;
  string name = 2;
  Gender gender = 3;
  int64 birth_date_millis = 4;
}

message GetProfileRequest{
}
message ClearProfileRequest{
}



service ProfileService{
  rpc GetProfile(GetProfileRequest) returns (Profile){
    option (google.api.http) = {
      post: "/v2/profile/get"
      body: "*"
    };
  };
  rpc SubmitProfile(Identity) returns (Profile){
    option (google.api.http) = {
      post: "/v2/profile/create"
      body: "*"
    };
  };
  rpc ClearProfile(ClearProfileRequest) returns (Profile){
    option (google.api.http) = {
      post: "/v2/profile/clear"
      body: "*"
    };
  };
}